Write to file new line fix

--- a/configuration.json
+++ b/configuration.json
@@ -2,7 +2,8 @@
     "enable_VT" : "True",
     "enable_AbuseIP" : "True",
     "input_filename" : "input_list.txt",
-    "output_filename" : "output_list.txt",
+    "output_filename" : "output_list.csv",
     "VT_API_KEYS_filename" : "VT_API_KEYS.txt",
-    "AIP_API_KEYS_filename" : "AIP_API_KEYS.txt"
+    "AIP_API_KEYS_filename" : "AIP_API_KEYS.txt",
+    "delimiter" : ";"
 }
